--- a/AI/Ch4_news.ipynb
+++ b/AI/Ch4_news.ipynb
@@ -7,8 +7,8 @@
    "outputs": [],
    "source": [
     "from tensorflow.keras.datasets import reuters\n",
-    "(train_data, train_labels), (test_data, test_labels) = reuters.load_data(\n",
-    "    num_words=10000)"
+    "\n",
+    "(train_data, train_labels), (test_data, test_labels) = reuters.load_data(num_words=10000)"
    ]
   },
   {
@@ -109,6 +109,7 @@
    "source": [
     "word_index = reuters.get_word_index()\n",
     "reverse_word_index = dict([(value, key) for (key, value) in word_index.items()])\n",
+    "## 0,1,2는 '패딩', '문서 시작', '사전에 없음'을 위한 인덱스이므로 3을 뺍니다\n",
     "decoded_newswire = \" \".join([reverse_word_index.get(i - 3, \"?\") for i in\n",
     "    train_data[0]])"
    ]
@@ -141,10 +142,12 @@
    "source": [
     "import numpy as np\n",
     "\n",
+    "## 멀티-핫 인코딩 -> 멀티-핫 벡터로 변환\n",
     "def vectorize_sequences(sequences, dimension=10000):\n",
+    "    ## 크기가(len(sequences), dimension)이고 모든 원소가 0인 행렬을 만듦\n",
     "    results = np.zeros((len(sequences), dimension))\n",
     "    for i, sequence in enumerate(sequences):\n",
-    "        results[i, sequence] = 1.\n",
+    "        results[i, sequence] = 1. ## results[i]에사 특정 인덱스의 위치를 1로 만듦\n",
     "    return results"
    ]
   },
@@ -197,7 +200,9 @@
     "model = keras.Sequential([\n",
     "    layers.Dense(64, activation=\"relu\"),\n",
     "    layers.Dense(64, activation=\"relu\"),\n",
-    "    layers.Dense(46, activation=\"softmax\")\n",
+    "    ## 각 입력 샘플마다 46개의 출력 클래스에 대한 확룰 분포를 출력\n",
+    "    ## 확룰을 모두 더하면 1\n",
+    "    layers.Dense(46, activation=\"softmax\") \n",
     "])"
    ]
   },
@@ -279,7 +284,7 @@
    "source": [
     "history = model.fit(partial_x_train,\n",
     "    partial_y_train,\n",
-    "    epochs=20,\n",
+    "    epochs=20, ## 20번의 에포크로 모델을 훈련\n",
     "    batch_size=512,\n",
     "    validation_data=(x_val, y_val))"
    ]
