--- a/AI/Ch4_home.ipynb
+++ b/AI/Ch4_home.ipynb
@@ -131,7 +131,7 @@
     "from tensorflow import keras\n",
     "from tensorflow.keras import layers\n",
     "\n",
-    "def build_model():\n",
+    "def build_model(): ## 동일한 모델을 여러번 생성할 것이므로 함수를 만들어 사용\n",
     "    model = keras.Sequential([\n",
     "        layers.Dense(64, activation=\"relu\"),\n",
     "        layers.Dense(64, activation=\"relu\"),\n",
@@ -245,13 +245,21 @@
     "for i in range(k):\n",
     "    print('processing fold #', i)\n",
     "    val_data = train_data[i * num_val_samples: (i + 1) * num_val_samples]\n",
-    "    val_targets = train_targets[i * num_val_samples: (i + 1) * num_val_samples] # 검증 데이터 준비: k번째 분할\n",
+    "    ## 검증 데이터 준비: k번째 분할\n",
+    "    val_targets = train_targets[i * num_val_samples: (i + 1) * num_val_samples] \n",
     "\n",
-    "    partial_train_data = np.concatenate([train_data[:i * num_val_samples], train_data[(i + 1) * num_val_samples:]], axis=0) # 훈련 데이터 준비: 다른 분할 전체\n",
+    "    ## 훈련 데이터 준비: 다른 분할 전체\n",
+    "    partial_train_data = np.concatenate([train_data[:i * num_val_samples], train_data[(i + 1) * num_val_samples:]], axis=0) \n",
     "    partial_train_targets = np.concatenate([train_targets[:i * num_val_samples], train_targets[(i + 1) * num_val_samples:]], axis=0)\n",
     "\n",
-    "    model = build_model() # 케라스 모델 구성(컴파일 포함)\n",
-    "    history = model.fit(partial_train_data, partial_train_targets, validation_data=(val_data, val_targets), epochs=num_epochs, batch_size=16, verbose=0) # 모델 훈련(verbose=0) 이므로 훈련 과정이 출력되지 않습니다.\n",
+    "    model = build_model() ## 케라스 모델 구성(컴파일 포함)\n",
+    "    ## 모델 훈련(verbose=0) 이므로 훈련 과정이 출력되지 않습니다.\n",
+    "    history = model.fit(partial_train_data, partial_train_targets, \n",
+    "                        validation_data=(val_data, val_targets),\n",
+    "                        epochs=num_epochs, \n",
+    "                        batch_size=16, \n",
+    "                        verbose=0)\n",
+    "    \n",
     "    mae_history = history.history[\"val_mae\"]\n",
     "    all_mae_histories.append(mae_history)"
    ]
@@ -262,7 +270,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "average_mae_history = [np.mean([x[i] for x in all_mae_histories]) for i in range(num_epochs)]"
+    "average_mae_history = [\n",
+    "    np.mean([x[i] for x in all_mae_histories]) for i in range(num_epochs)]"
    ]
   },
   {
@@ -328,7 +337,8 @@
     }
    ],
    "source": [
-    "model = build_model()\n",
+    "model = build_model() ## 새롭게 컴파일된 모델을 얻음\n",
+    "## 전체 데이터로 훈련시킴\n",
     "model.fit(train_data, train_targets, epochs=130, batch_size=16, verbose=0)\n",
     "test_mse_score, test_mae_score = model.evaluate(test_data, test_targets)"
    ]
