--- a/AI/Ch8.ipynb
+++ b/AI/Ch8.ipynb
@@ -706,6 +706,43 @@
         "test_loss, test_acc = test_model.evaluate(test_dataset)\n",
         "print(f'테스트 정확도: {test_acc:3f}')"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "## 모델 미세 조정하기\n",
+        "model.compile(loss='binary_crossentropy',\n",
+        "                optimizer=keras.optimizers.RMSprop(lr=1e-5),\n",
+        "                metrics=['accuracy'])\n",
+        "\n",
+        "callbacks = [\n",
+        "    keras.callbacks.ModelCheckpoint(\n",
+        "        filepath='fine_tuning.h5',\n",
+        "        save_best_only=True,\n",
+        "        monitor='val_loss')\n",
+        "]\n",
+        "\n",
+        "history = model.fit(\n",
+        "    train_dataset,\n",
+        "    epochs=30,\n",
+        "    validation_data=validation_dataset,\n",
+        "    callbacks=callbacks)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "## 테스트 데이터에서 모델 평가하기\n",
+        "model = keras.models.load_model('fine_tuning.h5')\n",
+        "test_loss, test_acc = model.evaluate(test_dataset)\n",
+        "print(f'테스트 정확도: {test_acc:.3f}')"
+      ]
     }
   ],
   "metadata": {
